--- a/style.css
+++ b/style.css
@@ -43,10 +43,12 @@ body {
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
 }
+
 a {
   text-decoration: none;
   display: inline-block;
 }
+
 ul,
 a {
   list-style: none;
@@ -54,16 +56,20 @@ a {
   margin: 0px;
   padding: 0px;
 }
+
 a:hover {
   text-decoration: none;
   color: inherit;
 }
+
 i {
   font-style: italic;
 }
+
 div {
   outline: none;
 }
+
 img {
   max-width: 100%;
   height: auto;
@@ -75,9 +81,7 @@ img {
   padding: 0 20px;
 }
 
-:root {
-  --red: "#000";
-}
+
 /*Header */
 
 .header {
@@ -87,17 +91,20 @@ img {
   align-items: center;
   padding: 20px;
 }
+
 .header-menu ul {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 30px;
 }
+
 .header-menu ul li {
   cursor: pointer;
   font-size: 14px;
   color: #506690;
 }
+
 /* .header-menu ul li :hover{
     
 } */
@@ -121,74 +128,95 @@ img {
   height: 100%;
   margin-top: 96px;
 }
+
 /* section1 */
 .main-wrapper .left-wrapper {
   width: 50%;
   padding: 0 20px;
 }
+
 .main-wrapper .left-wrapper h1 {
   font-size: 2.5rem;
   font-weight: 400;
   margin-bottom: 16px;
 }
+
 .main-wrapper .left-wrapper h1 span {
   color: #335eea;
 }
+
 .main-wrapper .left-wrapper p {
   font-size: 21px;
   color: #7c8097ad;
   margin-bottom: 48px;
 }
+
 .main-wrapper .left-wrapper .hero-btn {
   display: flex;
   align-items: center;
   gap: 10px;
 }
+
 .main-wrapper .left-wrapper .hero-btn button {
   padding: 13px 20px;
   border: none;
   border-radius: 8px;
   font-size: 16px;
 }
+
 .main-wrapper .left-wrapper .hero-btn .left-btn {
   background-color: #335eea;
   color: white;
 }
+
 .main-wrapper .left-wrapper .hero-btn .left-btn i {
   margin-left: 10px;
 }
+
 .main-wrapper .left-wrapper .hero-btn .right-btn {
   color: #335eea;
 }
+
 .main-wrapper .right-wrapper {
   width: 50%;
   padding: 0 20px;
 }
+
 /* section1 */
 
 /* section2 */
 .max-content {
-  margin: 96px 0;
+  padding: 96px 0;
+  border-bottom: 1px solid#edeef1;
 }
 
 .content {
   padding: 0 20px;
   width: 33.33333333%;
 }
+
 .content h6 {
   font-size: 20px;
   margin-bottom: 8px;
   font-weight: 400;
 }
+
 .content p {
   font-size: 15px;
   color: #869ab8;
 }
 
+.content-icon {
+  padding: 10px 0;
+  display: flex;
+  flex-direction: column;
+}
+
 .content-icon i {
   color: #4f4ff5;
-  font-size: 20px;
+  font-size: 25px;
 }
+
 .content-icon h6 {
   font-size: 21px;
 }
@@ -198,8 +226,9 @@ img {
 /* section3 */
 
 .max-contain-wrapper {
-  border: 1px solid rgb(206, 205, 205);
+  border-bottom: 1px solid #edeef1;
 }
+
 .main-contain-wrapper {
   display: flex;
   justify-content: center;
@@ -208,10 +237,12 @@ img {
   width: 100%;
   height: 100%;
 }
+
 .contain-wrapper {
   margin-right: 40px;
   padding: 48px 0;
 }
+
 .contain-wrapper img {
   filter: grayscale(100%);
 }
@@ -222,6 +253,7 @@ img {
 .cart-container {
   background-color: #fafbfd;
 }
+
 .main-cart-wrapper {
   display: flex;
   justify-content: space-between;
@@ -230,7 +262,9 @@ img {
   width: 100%;
   height: 100%;
   padding: 96px 0;
+  
 }
+
 .content-contact {
   width: 50%;
 }
@@ -239,16 +273,14 @@ img {
   width: 41%;
   background-color: white;
   /* box-shadow: 100% 4px 8px 3px white; */
-  box-shadow: 10px 10px 5px ;
+  box-shadow: 0 3px 10px rgba(129, 128, 128, 0.2);
   border-radius: 10px;
 }
-.main-cart-wrapper .cart-left :hover {
-  width: 41%;
-  background-color: white;
-  /* box-shadow: 100% 4px 8px 3px white; */
-  box-shadow: 10px 10px 5px #aaaaaa;
-  border-radius: 10px;
+
+.cart-left:hover {
+  box-shadow: 0 3px 10px rgba(40, 38, 38, 0.2);
 }
+
 .main-cart-wrapper .cart-left .card-body {
   padding: 32px;
   display: flex;
@@ -257,75 +289,145 @@ img {
   align-items: center;
   gap: 10px;
 }
+
 .main-cart-wrapper .cart-left .card-body form {
   width: 100%;
 }
+
 .main-cart-wrapper .cart-left .card-body .contain-input {
   display: flex;
   flex-direction: column;
   width: 100%;
 }
+
 .main-cart-wrapper .cart-left .card-body form .contain-input input {
-  padding: 10px;
+  padding: 8px;
   border: none;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #edeef1;
 }
+
 .main-cart-wrapper .cart-left .card-body form .contain-input input:focus {
-  border: none;
   outline: none;
 }
+
 .main-cart-wrapper .cart-left .card-body form .contain-input label {
   font-size: 14px;
+  color: #7b818b;
 }
+
 .main-cart-wrapper .cart-left .card-body form .form-btn {
   background-color: #42ba96;
   color: white;
   padding: 13px 20px;
+  margin-top: 20px;
   border: none;
   border-radius: 8px;
   font-size: 16px;
   width: 100%;
 }
 
-.main-cart-wrapper .cart-left img {
+/* .main-cart-wrapper .cart-left img {
   width: 500px;
-  border-radius: 10px;
-}
+  clip-path: ellipse(100% 60%);
+} */
+
 .main-cart-wrapper .cart-right {
   width: 50%;
   max-width: 418px;
   margin: 0 20px;
 }
+
 .main-cart-wrapper .cart-right h2 {
   line-height: 1.3;
   font-size: 35px;
   margin-bottom: 10px;
+  font-weight: 400;
 }
 
 .main-cart-wrapper .cart-right h2 span {
   color: #40b994;
   margin-bottom: 32px;
 }
+
 .main-cart-wrapper .cart-right p {
   color: #869ab8;
   font-size: 17px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
+
 .main-cart-wrapper .cart-right .contain-all {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .main-cart-wrapper .cart-right .contain-all-icon {
   display: flex;
-  justify-content: space-between;
   color: #40b994;
   justify-items: center;
-  gap: 10px;
+  gap: 20px;
 }
+
 .main-cart-wrapper .cart-right .contain-all-icon p {
   color: #40b994;
   font-size: 14px;
 }
+
+/* bottom */
+.main-cart-wrapper .bottom-left {
+  width: 50%;
+  padding: 0 20px;
+}
+
+.main-cart-wrapper .bottom-left h2 {
+  line-height: 1.3;
+  font-size: 35px;
+  margin-bottom: 10px;
+  font-weight: 400;
+}
+
+.main-cart-wrapper .bottom-left h2 span {
+  color: #335eea;
+  margin-bottom: 32px;
+  line-height: 1.3;
+}
+
+.main-cart-wrapper .bottom-left P {
+  color: #869ab8;
+  font-size: 16px;
+  margin-bottom: 38px;
+}
+
+.main-cart-wrapper .bottom-left .contain-all .contain-left {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.main-cart-wrapper .bottom-left .contain-all .contain-left {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.main-cart-wrapper .bottom-left .contain-all .contain-left .contain-all-icon h4 {
+  font-weight: 400;
+  margin-bottom: 4px;
+  font-size: 19px;
+}
+
+.main-cart-wrapper .bottom-left .contain-all .contain-left i {
+  color: #4f4ff5;
+  font-size: 32px;
+}
+
+.main-cart-wrapper .bottom-right {
+  width: 50%;
+  padding: 0 20px;
+}
+
+/* bottom */
 
 /* section4 */
 
@@ -336,30 +438,37 @@ img {
   margin-top: 100px;
   padding: 20px;
 }
+
 .footer-list-logo {
   width: 25%;
   line-height: 2;
 }
+
 .footer-list-logo .social-logo i {
   padding-right: 10px;
   font-size: 17px;
   color: #9b9da1;
 }
+
 .footer-list-logo p {
   font-size: 17px;
   color: #506690;
 }
+
 .footer-list {
   width: 16.66666667%;
   line-height: 2;
 }
+
 .footer-list li a {
   color: #869ab8;
   font-size: 12px;
 }
+
 .footer-list li :hover {
   text-decoration: underline;
 }
+
 .footer-list h6 {
   font-size: 12px;
   text-transform: uppercase;
