--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ img {
 }
 
 .container {
-  max-width: 980px;
+  max-width: 1050px;
   margin: auto;
   padding: 0 20px;
 }
@@ -189,6 +189,14 @@ img {
   padding: 96px 0;
   border-bottom: 1px solid#edeef1;
 }
+.max-content .contain-wrapper{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
 
 .content {
   padding: 0 20px;
@@ -202,8 +210,10 @@ img {
 }
 
 .content p {
-  font-size: 15px;
+  font-size: 17px;
   color: #869ab8;
+  line-height: 1.5;
+  opacity: 1;
 }
 
 .content-icon {
@@ -233,13 +243,13 @@ img {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  gap: 45px;
   align-items: center;
   width: 100%;
   height: 100%;
 }
 
-.contain-wrapper {
-  margin-right: 40px;
+.max-contain-wrapper .main-contain-wrapper .contain-wrapper {
   padding: 48px 0;
 }
 
@@ -254,7 +264,7 @@ img {
   background-color: #fafbfd;
 }
 
-.main-cart-wrapper {
+.main-cart-wrapper-top {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -262,26 +272,28 @@ img {
   width: 100%;
   height: 100%;
   padding: 96px 0;
-  
+
 }
 
 .content-contact {
   width: 50%;
 }
 
-.main-cart-wrapper .cart-left {
+.main-cart-wrapper-top .cart-left {
   width: 41%;
   background-color: white;
-  /* box-shadow: 100% 4px 8px 3px white; */
-  box-shadow: 0 3px 10px rgba(129, 128, 128, 0.2);
-  border-radius: 10px;
+  box-shadow: 0 1.5rem 4rem rgba(22, 28, 45, .05);
+  border-radius: 8px;
+}
+.main-cart-wrapper-top .cart-left img{
+  border-radius: 8px;
 }
 
 .cart-left:hover {
   box-shadow: 0 3px 10px rgba(40, 38, 38, 0.2);
 }
 
-.main-cart-wrapper .cart-left .card-body {
+.main-cart-wrapper-top .cart-left .card-body {
   padding: 32px;
   display: flex;
   flex-direction: column;
@@ -290,33 +302,33 @@ img {
   gap: 10px;
 }
 
-.main-cart-wrapper .cart-left .card-body form {
+.main-cart-wrapper-top .cart-left .card-body form {
   width: 100%;
 }
 
-.main-cart-wrapper .cart-left .card-body .contain-input {
+.main-cart-wrapper-top .cart-left .card-body .contain-input {
   display: flex;
   flex-direction: column;
   width: 100%;
 }
 
-.main-cart-wrapper .cart-left .card-body form .contain-input input {
+.main-cart-wrapper-top .cart-left .card-body form .contain-input input {
   padding: 8px;
   border: none;
   margin-bottom: 10px;
   border-bottom: 1px solid #edeef1;
 }
 
-.main-cart-wrapper .cart-left .card-body form .contain-input input:focus {
+.main-cart-wrapper-top .cart-left .card-body form .contain-input input:focus {
   outline: none;
 }
 
-.main-cart-wrapper .cart-left .card-body form .contain-input label {
+.main-cart-wrapper-top .cart-left .card-body form .contain-input label {
   font-size: 14px;
   color: #7b818b;
 }
 
-.main-cart-wrapper .cart-left .card-body form .form-btn {
+.main-cart-wrapper-top .cart-left .card-body form .form-btn {
   background-color: #42ba96;
   color: white;
   padding: 13px 20px;
@@ -327,109 +339,241 @@ img {
   width: 100%;
 }
 
-/* .main-cart-wrapper .cart-left img {
+/* .main-cart-wrapper-top .cart-left img {
   width: 500px;
   clip-path: ellipse(100% 60%);
 } */
 
-.main-cart-wrapper .cart-right {
+.main-cart-wrapper-top .cart-right {
   width: 50%;
   max-width: 418px;
   margin: 0 20px;
 }
 
-.main-cart-wrapper .cart-right h2 {
+.main-cart-wrapper-top .cart-right h2 {
   line-height: 1.3;
   font-size: 35px;
   margin-bottom: 10px;
   font-weight: 400;
 }
 
-.main-cart-wrapper .cart-right h2 span {
+.main-cart-wrapper-top .cart-right h2 span {
   color: #40b994;
   margin-bottom: 32px;
 }
 
-.main-cart-wrapper .cart-right p {
+.main-cart-wrapper-top .cart-right p {
   color: #869ab8;
   font-size: 17px;
   margin-bottom: 20px;
 }
 
-.main-cart-wrapper .cart-right .contain-all {
+.main-cart-wrapper-top .cart-right .contain-all {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.main-cart-wrapper .cart-right .contain-all-icon {
+.main-cart-wrapper-top .cart-right .contain-all-icon {
   display: flex;
   color: #40b994;
   justify-items: center;
   gap: 20px;
 }
 
-.main-cart-wrapper .cart-right .contain-all-icon p {
+.main-cart-wrapper-top .cart-right .contain-all-icon p {
   color: #40b994;
   font-size: 14px;
 }
 
 /* bottom */
-.main-cart-wrapper .bottom-left {
+
+.main-cart-wrapper-bottom {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.main-cart-wrapper-bottom .bottom-left {
   width: 50%;
   padding: 0 20px;
 }
 
-.main-cart-wrapper .bottom-left h2 {
+.main-cart-wrapper-bottom .bottom-left h2 {
   line-height: 1.3;
   font-size: 35px;
   margin-bottom: 10px;
   font-weight: 400;
 }
 
-.main-cart-wrapper .bottom-left h2 span {
+.main-cart-wrapper-bottom .bottom-left h2 span {
   color: #335eea;
   margin-bottom: 32px;
   line-height: 1.3;
 }
 
-.main-cart-wrapper .bottom-left P {
+.main-cart-wrapper-bottom .bottom-left P {
   color: #869ab8;
-  font-size: 16px;
+  font-size: 18px;
   margin-bottom: 38px;
 }
 
-.main-cart-wrapper .bottom-left .contain-all .contain-left {
+.main-cart-wrapper-bottom .bottom-left .contain-all .contain-left {
   display: flex;
   justify-content: center;
   gap: 24px;
 }
 
-.main-cart-wrapper .bottom-left .contain-all .contain-left {
+.main-cart-wrapper-bottom .bottom-left .contain-all .contain-left {
   display: flex;
   justify-content: center;
   gap: 24px;
 }
 
-.main-cart-wrapper .bottom-left .contain-all .contain-left .contain-all-icon h4 {
+.main-cart-wrapper-bottom .bottom-left .contain-all .contain-left .contain-all-icon h4 {
   font-weight: 400;
   margin-bottom: 4px;
   font-size: 19px;
 }
 
-.main-cart-wrapper .bottom-left .contain-all .contain-left i {
+.main-cart-wrapper-bottom .bottom-left .contain-all .contain-left i {
   color: #4f4ff5;
   font-size: 32px;
 }
 
-.main-cart-wrapper .bottom-right {
+.main-cart-wrapper-bottom .bottom-right {
   width: 50%;
   padding: 0 20px;
 }
 
+/* .main-cart-wrapper-bottom .bottom-right img{
+ transform: rotateY(-45deg) rotateX(15deg);
+} */
+
+
+
 /* bottom */
 
 /* section4 */
+
+/* section5 */
+.slid-container {
+  background-color: #fafbfd;
+  padding-top: 96px;
+}
+
+.slid-container .container .slider-container {
+  padding: 0 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.slider-wrapper-top {
+  width: 60%;
+  text-align: center;
+}
+
+.slider-wrapper-top h2 {
+  font-size: 25px;
+  margin-bottom: 16px;
+  font-weight: 300;
+}
+
+.slider-wrapper-top p {
+  color: #869ab8;
+  font-size: 16px;
+  line-height: 1.5;
+  margin-bottom: 40px;
+}
+
+
+.slid-container .container .slider-wrapper-bottom {
+  box-shadow: 0 3px 10px rgba(129, 128, 128, 0.2);
+  background: #ffffff;
+  font-size: 14px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  text-align: center;
+  position: relative;
+}
+
+.slider-wrapper-bottom .slider-left {
+  width: 50%;
+}
+
+.slider-wrapper-bottom .slider-left img {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.slider-wrapper-bottom .slider-right {
+  width: 50%;
+  padding: 0 20px;
+}
+
+.slider-wrapper-bottom .slider-right p {
+  font-size: 22px;
+  margin-bottom: 40px;
+  color: #161c2d;
+  line-height: 1.5;
+  opacity: 1;
+}
+
+.slider-wrapper-bottom .slider-right p span {
+  font-size: 14px;
+  font-size: 16px;
+  color: #869ab8;
+}
+
+.slider-wrapper-bottom i {
+  color: white;
+  background-color: transparent;
+  font-size: 16px;
+}
+
+.slider-wrapper-bottom .left-arrow {
+  left: -20px;
+  top: 135px;
+  border: none;
+  background-color: #335eea;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.slider-wrapper-bottom .right-arrow {
+  right: -20px;
+  top: 135px;
+  border: none;
+  background-color: #335eea;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+
+/* section5 */
+
+/* section6 */
+
+/* section6 */
 
 /* footer */
 .footer-wrapper {
@@ -453,6 +597,7 @@ img {
 .footer-list-logo p {
   font-size: 17px;
   color: #506690;
+  opacity: 1;
 }
 
 .footer-list {
