--- a/style.css
+++ b/style.css
@@ -1298,8 +1298,7 @@ img {
 .footer-wrapper {
   display: flex;
   justify-content: space-between;
-  margin-top: 100px;
-  padding: 20px;
+  padding-top: 48px;
 }
 
 .footer-list-logo {
